--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="timer.css">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
@@ -20,6 +20,6 @@
             </div>
         </div>
     </div>
-    <script src="timer.js"> </script>
+    <script src="index.js"> </script>
 </body>
 </html>
